syntax = "proto3";

package hello_http;
option go_package = "./hello_http";

import "google/api/annotations.proto";

// 定义hello服务
service Hello {
  rpc SayHello(HelloHTTPRequest) returns(HelloHTTPResponse){
    // http option
    option (google.api.http) = {
      post: "/example/echo"
      body: "*"
    };
  }
}
message HelloHTTPRequest {
  string name = 1;
}
message HelloHTTPResponse {
  string message = 1;
}
